other method to convert: transform to string

--- a/scripts/templates/index.html
+++ b/scripts/templates/index.html
@@ -71,7 +71,7 @@
 					<a name="check"></a>
 					<div class="subtitle">Check profile</div>
 					<p>
-						<form action="$site$clarin/vlo/mapping/check" method="post" enctype="multipart/form-data" target="clarin-ws-cmd-core-validate">
+						<form action="./mapping/check" method="get" target="clarin-ws-cmd-core-validate">
 							<fieldset>
 								<legend>Check mapping in a CMD profile</legend>
 								<p>
